--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "",
   "main": "mongodb.js",
   "scripts": {
-    "start": "node src/index.js",
-    "dev": "env-cmd -f ./config/dev.env nodemon src/index.js",
+    "star": "node src/index.js",
+    "start": "env-cmd -f ./config/dev.env nodemon src/index.js",
     "test": "env-cmd -f ./config/test.env jest --watch"
   },
   "jest": {
@@ -23,6 +23,7 @@
     "mongoose": "^5.9.16",
     "multer": "^1.4.2",
     "sharp": "^0.25.3",
+    "twilio": "^3.48.1",
     "validator": "^13.0.0"
   },
   "devDependencies": {
